--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "node-cron": "^4.2.1",
     "nodemon": "^3.1.11"
   }
