Add TCP ping and Zabbix reporting to cron job
Introduces TCP ping functionality using 'tcp-ping' and sends results to Zabbix via 'zabbix-promise'. Updates dependencies in package.json and exposes port 10051 in Dockerfile. The original HTTP fetch cron job is commented out in favor of the new ping-based monitoring.

--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "node-cron": "^3.0.2",
     "dotenv": "^16.0.0",
-    "node-fetch": "^3.3.1"
+    "net-ping": "^1.2.4",
+    "node-cron": "^3.0.2",
+    "node-fetch": "^3.3.1",
+    "ping": "^1.0.0",
+    "tcp-ping": "^0.1.1",
+    "zabbix-promise": "^2.0.2"
   }
 }
